--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,38 @@
  *= require_tree .
  *= require_self
  */
+
+ body{
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  line-height: 1.5;
+  padding-left: 10px;
+ }
+
+h3{
+  margin: 10px;
+  padding-bottom: 3px;
+ }
+
+ #question {
+  border-left: rgba(132, 132, 132, 0.632) solid 4px;
+  margin: 10px;
+  padding-left: 5px;
+ }
+
+ #answer {
+  border-left: rgba(132, 132, 132, 0.632) solid 4px;
+  margin: 10px;
+  padding-left: 5px;
+  background-color: rgba(249, 243, 129, 0.358);
+  font-weight:bold;
+ }
+
+ #signature {
+  font-style: italic;
+  font-weight: normal;
+ }
+
+a{
+  text-decoration: none;
+  color: rgb(99, 146, 190);
+ }
